--- a/Assignment1/styles.css
+++ b/Assignment1/styles.css
@@ -1,3 +1,12 @@
+                h1{
+                    color: red;
+                }
+                h2{
+                    color: green;
+                }
+                h3{
+                    color: black;
+                }
                 .nav-Bissau {
                     display: flex;
                     justify-content: space-between;
